# python_uv_cloud_music

./: .gitignore  CHANGE_HISTORY.md  README.md  config.yml  config_manager.py  demo.py  interactive_process.py  logging_config.py  main.py  music_info.sql  process_album_artist_fix.py  process_album_cover_redownload.py  process_album_lyrics_fix.py  process_album_metadata_fix.py  process_cloud_music.py  process_from_folders.py  pyproject.toml  tool_next_music.py  tool_next_music_v1.py  tool_next_music_v2.py  util_commons.py  util_config.py  util_database.py  util_file.py  util_music_api.py  util_music_downloader.py  util_music_metadata.py  utils.py
api_docs/: get_playlist.md  next_misic_tool.md
ddl/: music_info.sql  music_url.sql
docs/api/: get_album.md  get_song.md
docs/ddl/: config.sql
logs_archived/: logs-20260227.7z  logs-20260331.7z
model/: __init__.py
model/basic/: __init__.py
model/extra/: __init__.py  album_metadata.py  playlist_metadata.py  song_metadata.py
scripts/: cloud-music.cmd
src/model/: __init__.py
src/process/: process_album_artist_fix.py  process_album_cover_redownload.py  process_album_info_loader.py  process_album_lyrics_fix.py  process_album_metadata_fix.py  process_cloud_music.py  process_from_folders.py
src/tool/: tool_next_music_v1.py  tool_next_music_v2.py
src/util/: util_commons.py  util_config.py  util_database.py  util_file.py  util_logging.py  util_music_api.py  util_music_downloader.py  util_music_metadata.py
tasks/: nextmusic_encryption_task.md
tasks/20260513/: test_by_google.py  test_nextmusic_encryption.py  (+2 more)
(+11 files in other folders)
