[project]
name = "python-uv-cloud-music"
version = "0.1.0"
description = "Cloud Music Download Tool"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "mutagen>=1.47.0",
    "pyyaml>=6.0",
    "imagesize>=1.4.0",
    "pycryptodome>=3.23.0",
    "cryptography>=42.0.0",
    "curl-cffi>=0.15.0",
    "tqdm>=4.66.0",
]

[tool.uv.sources]
python-uv-cloud-music = { path = ".", editable = true }

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools.packages.find]
where = ["src"]
